; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfenc.c_put_swf_rect.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfenc.c_put_swf_rect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32)* @put_swf_rect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_swf_rect(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_6__, align 4
  %12 = alloca [256 x i32], align 16
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %15 = getelementptr inbounds [256 x i32], [256 x i32]* %12, i64 0, i64 0
  %16 = call i32 @init_put_bits(%struct.TYPE_6__* %11, i32* %15, i32 1024)
  store i32 0, i32* %13, align 4
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @max_nbits(i32* %13, i32 %17)
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @max_nbits(i32* %13, i32 %19)
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @max_nbits(i32* %13, i32 %21)
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @max_nbits(i32* %13, i32 %23)
  %25 = load i32, i32* %13, align 4
  %26 = shl i32 1, %25
  %27 = sub nsw i32 %26, 1
  store i32 %27, i32* %14, align 4
  %28 = load i32, i32* %13, align 4
  %29 = call i32 @put_bits(%struct.TYPE_6__* %11, i32 5, i32 %28)
  %30 = load i32, i32* %13, align 4
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %14, align 4
  %33 = and i32 %31, %32
  %34 = call i32 @put_bits(%struct.TYPE_6__* %11, i32 %30, i32 %33)
  %35 = load i32, i32* %13, align 4
  %36 = load i32, i32* %8, align 4
  %37 = load i32, i32* %14, align 4
  %38 = and i32 %36, %37
  %39 = call i32 @put_bits(%struct.TYPE_6__* %11, i32 %35, i32 %38)
  %40 = load i32, i32* %13, align 4
  %41 = load i32, i32* %9, align 4
  %42 = load i32, i32* %14, align 4
  %43 = and i32 %41, %42
  %44 = call i32 @put_bits(%struct.TYPE_6__* %11, i32 %40, i32 %43)
  %45 = load i32, i32* %13, align 4
  %46 = load i32, i32* %10, align 4
  %47 = load i32, i32* %14, align 4
  %48 = and i32 %46, %47
  %49 = call i32 @put_bits(%struct.TYPE_6__* %11, i32 %45, i32 %48)
  %50 = call i32 @flush_put_bits(%struct.TYPE_6__* %11)
  %51 = load i32*, i32** %6, align 8
  %52 = getelementptr inbounds [256 x i32], [256 x i32]* %12, i64 0, i64 0
  %53 = call i32 @put_bits_ptr(%struct.TYPE_6__* %11)
  %54 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = sub nsw i32 %53, %55
  %57 = call i32 @avio_write(i32* %51, i32* %52, i32 %56)
  ret void
}

declare dso_local i32 @init_put_bits(%struct.TYPE_6__*, i32*, i32) #1

declare dso_local i32 @max_nbits(i32*, i32) #1

declare dso_local i32 @put_bits(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @flush_put_bits(%struct.TYPE_6__*) #1

declare dso_local i32 @avio_write(i32*, i32*, i32) #1

declare dso_local i32 @put_bits_ptr(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
